--- a/style.css
+++ b/style.css
@@ -493,7 +493,7 @@ html {
 hr {
   border-top: 1px solid #8c8b8b;
   width: 30%;
-  height: 10px
+  height: 10px;
   border: none;
   margin-top: 30px;
   margin-left: auto;
