--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
-.self {
-  border-radius: 50%;
-  height: 200px;
+body {
+  font-family: 'Droid Serif', serif;
+}
+
+.navbar {
+  box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.rounded-circle {
+  height: 250px;
 }
 
 hr {
   height: 30px;
+  width: 500px;
   border-style: solid;
   border-color: #8c8b8b;
   border-width: 1px 0 0 0;
@@ -15,9 +23,20 @@ hr:before {
   display: block;
   content: "";
   height: 30px;
+  width: 500px;
   margin-top: -31px;
   border-style: solid;
   border-color: #8c8b8b;
   border-width: 0 0 1px 0;
   border-radius: 20px;
+}
+
+
+.portfolio {
+  background-color: #c9cfd8;
+  margin-top: -32px;
+}
+
+.contact {
+  margin-top: 100px;
 }
